syntax = "proto3";

import "google/protobuf/empty.proto";
import "id.proto";

package demons;

option java_package = "com.grigoryev.demons";
option java_multiple_files = true;

message Demon {
  int64 id = 1;
  string name = 2;
  DemonType type = 3;
  int32 level = 4;
  string ability = 5;
  bool isCaptured = 6;
}

enum DemonType {
  SINISTER = 0;
  FIEND = 1;
  SPECTER = 2;
  WRAITH = 3;
  PHANTOM = 4;
  DEVIL = 5;
}

service DemonService {
  rpc findById(IdRequest) returns (Demon) {};
  rpc findAll(google.protobuf.Empty) returns (stream Demon) {};
  rpc findAllByIds(stream IdRequest) returns(stream Demon) {};
}
